--- a/zachet.css
+++ b/zachet.css
@@ -13,7 +13,7 @@ font-size: 18px;
 padding: 10px;
 }
 td {
-background: #E7E5E5;
+background: #f5f3f3;
 padding: 10px;
 box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15)
 }
